Uploaded answers for Question 4

--- a/Alpaca-AlgoTrading101-Chapter-2/Practice-1-Answers.ipynb
+++ b/Alpaca-AlgoTrading101-Chapter-2/Practice-1-Answers.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
     "import alpaca_trade_api as tradeapi\n",
     "import time\n",
     "\n",
-    "api = tradeapi.REST('PK9VYIDAYOTL992OMCOW', '3SRTFucHPuF1yKWUev5F2xDMlDcy3m9dyZXrMNKa', base_url='https://paper-api.alpaca.markets') "
+    "api = tradeapi.REST('<insert api key>', '<insert secret key>', base_url='https://paper-api.alpaca.markets') "
    ]
   },
   {
@@ -39,21 +39,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'api' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-9dc0c391c404>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;32mwhile\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0morder_sent\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m     \u001b[0mref_barset\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mapi\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_barset\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mreference_ticker\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'day'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlimit\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m6\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mreference_ticker\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      9\u001b[0m     \u001b[0mref_today_close\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mref_barset\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'close'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m     \u001b[0mref_five_days_ago_close\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mref_barset\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'close'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m6\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'api' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "ticker = 'ROKU'\n",
     "reference_ticker = 'NFLX'\n",
@@ -407,22 +395,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Checking Trading Rule...\n",
-      "  Ticker  Close Prices  Ask Prices  5 Day Returns (%)\n",
-      "2   NCLH        29.045       29.17           9.852496\n",
-      "0    CCL        27.500       27.50           9.430959\n",
-      "1    RCL        84.510       84.55           7.738399\n",
-      "accepted\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "import pandas as pd\n",
@@ -516,22 +491,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Checking Trading Rule...\n",
-      "  Ticker  Close Prices  Bid Prices  5 Day Returns (%)\n",
-      "1    RCL       84.7800       84.80           8.082611\n",
-      "0    CCL       27.6201       27.62           9.908874\n",
-      "2   NCLH       29.1850       29.17          10.381997\n",
-      "accepted\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "import pandas as pd\n",
@@ -600,6 +562,131 @@
     "    time.sleep(3)\n",
     "    \n",
     "print(order_info.status)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Question 4:\n",
+    "\n",
+    "We look at Carnival Corporation (CCL), Royal Caribbean Cruises (RCL) and Norwegian Cruise Line (NCLH) again.\n",
+    "\n",
+    "If over the last 5 days, the % change between price of the best performer and worst performer is more than 5%.\n",
+    "\n",
+    "Send in a buy limit for the worst performer at 10 cents higher than the ask price.\n",
+    "\n",
+    "Send in a sell limit for the best performer at 10 cents lower than the bid price.\n",
+    "\n",
+    "This is known as a pair trade. We look for 2 stocks that diverge, we then bet that they will converge.\n",
+    "\n",
+    "E.g.\n",
+    "\n",
+    "- Over the last 5 days, NCLH rose by 6%, CCL rose by 2%, and RCL fell by 1%. We enter a buy limit order for RCL and a sell limit for NCLH.\n",
+    "- Over the last 5 days, NCLH fell by 1%, CCL fell by 10%, and RCL fell by 5%. We enter a buy limit order for CCL and a sell limit for NCLH.\n",
+    "- Over the last 5 days, NCLH rose by 3%, CCL fell by 2%, and RCL fell by 1%. We do nothing."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "import pandas as pd\n",
+    "\n",
+    "ticker1 = 'CCL'\n",
+    "ticker2 = 'RCL'\n",
+    "ticker3 = 'NCLH'\n",
+    "\n",
+    "order_sent_long = None\n",
+    "order_sent_short = None\n",
+    "\n",
+    "while not order_sent_long or not order_sent_short:\n",
+    "\n",
+    "    ticker1_barset = api.get_barset(ticker1, 'day', limit = 6).df[ticker1]\n",
+    "    ticker1_today_close = ticker1_barset['close'][-1]\n",
+    "    ticker1_five_days_ago_close = ticker1_barset['close'][-6]\n",
+    "    ticker1_percent_change = (ticker1_today_close - ticker1_five_days_ago_close)/ticker1_five_days_ago_close*100\n",
+    "    ticker1_bid = api.get_last_quote(ticker1).bidprice\n",
+    "    ticker1_ask = api.get_last_quote(ticker1).askprice\n",
+    "    \n",
+    "    ticker2_barset = api.get_barset(ticker2, 'day', limit = 6).df[ticker2]\n",
+    "    ticker2_today_close = ticker2_barset['close'][-1]\n",
+    "    ticker2_five_days_ago_close = ticker2_barset['close'][-6]\n",
+    "    ticker2_percent_change = (ticker2_today_close - ticker2_five_days_ago_close)/ticker2_five_days_ago_close*100\n",
+    "    ticker2_bid = api.get_last_quote(ticker2).bidprice\n",
+    "    ticker2_ask = api.get_last_quote(ticker2).askprice\n",
+    "    \n",
+    "    ticker3_barset = api.get_barset(ticker3, 'day', limit = 6).df[ticker3]\n",
+    "    ticker3_today_close = ticker3_barset['close'][-1]\n",
+    "    ticker3_five_days_ago_close = ticker3_barset['close'][-6]\n",
+    "    ticker3_percent_change = (ticker3_today_close - ticker3_five_days_ago_close)/ticker3_five_days_ago_close*100\n",
+    "    ticker3_bid = api.get_last_quote(ticker3).bidprice\n",
+    "    ticker3_ask = api.get_last_quote(ticker3).askprice    \n",
+    "    \n",
+    "    # Create lists for data we need. We will use these to create a dataframe \n",
+    "    ticker_list = [ticker1, ticker2, ticker3]\n",
+    "    ticker_close_prices = [ticker1_today_close, ticker2_today_close, ticker3_today_close]\n",
+    "    ticker_bid_prices = [ticker1_bid, ticker2_bid, ticker3_bid]\n",
+    "    ticker_ask_prices = [ticker1_ask, ticker2_ask, ticker3_ask]\n",
+    "    five_day_returns_list = [ticker1_percent_change, ticker2_percent_change, ticker3_percent_change]\n",
+    "\n",
+    "    # Create dataframe with the data we need\n",
+    "    ticker_returns = pd.DataFrame(\n",
+    "                            {'Ticker': ticker_list,\n",
+    "                             'Close Prices': ticker_close_prices,\n",
+    "                             'Bid Prices': ticker_bid_prices,\n",
+    "                             'Ask Prices': ticker_ask_prices,\n",
+    "                             '5 Day Returns (%)': five_day_returns_list\n",
+    "                            })\n",
+    "    \n",
+    "    ticker_returns.sort_values(by=['5 Day Returns (%)'], ascending=False, inplace=True) # Sort by returns. HIGHEST at the top.\n",
+    "    \n",
+    "    order_info_long = None\n",
+    "    order_info_short = None\n",
+    "\n",
+    "    print('Checking Trading Rule...')\n",
+    "    \n",
+    "    if ticker_returns.iloc[0,4] - ticker_returns.iloc[2,4] > 1.5 :\n",
+    "        \n",
+    "        # Long\n",
+    "        \n",
+    "        order_info_long = api.submit_order(\n",
+    "            symbol=ticker_returns.iloc[2,0],\n",
+    "            side='buy',\n",
+    "            type='limit',\n",
+    "            limit_price=ticker_returns.iloc[2,3] + 0.10, # Ask price\n",
+    "            # limit_price=ticker_returns.iloc[2,1] + 0.10, # Use current close price if ask prices are incorrect.\n",
+    "            qty='1',\n",
+    "            time_in_force='day',\n",
+    "        )\n",
+    "        \n",
+    "        if  order_info_long.status == 'accepted':\n",
+    "            order_sent_long = True\n",
+    "        \n",
+    "        # Short\n",
+    "        \n",
+    "        order_info_short = api.submit_order(\n",
+    "            symbol=ticker_returns.iloc[0,0],\n",
+    "            side='sell',\n",
+    "            type='limit',\n",
+    "            limit_price=ticker_returns.iloc[0,2] - 0.10, # Bid price\n",
+    "            # limit_price=ticker_returns.iloc[0,1] + 0.10, # Use current close price if bid prices are incorrect.\n",
+    "            qty='1',\n",
+    "            time_in_force='day',\n",
+    "        )\n",
+    "\n",
+    "        if  order_info_short.status == 'accepted':\n",
+    "            order_sent_short = True        \n",
+    "\n",
+    "            \n",
+    "    print(ticker_returns) # Optional\n",
+    "    time.sleep(3)\n",
+    "    \n",
+    "print(f'Long leg: {order_info_long.status}')\n",
+    "print(f'Short leg: {order_info_short.status}')"
    ]
   },
   {
