--- a/Alpaca-AlgoTrading101-Chapter-3/Robot Aiur 1.01.ipynb
+++ b/Alpaca-AlgoTrading101-Chapter-3/Robot Aiur 1.01.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,9 +91,10 @@
     "        type='market',\n",
     "        client_order_id='Aiur_' + str(current_order_id),\n",
     "    )\n",
-    "    time.sleep(3)  # Give it a few seconds to process the order...\n",
     "\n",
     "    if order_info.status == 'accepted':\n",
+    "        \n",
+    "        time.sleep(3)  # Give it a few seconds to process the order...\n",
     "        \n",
     "        order_info_status = api.get_order_by_client_order_id(\n",
     "            'Aiur_' + str(current_order_id)\n",
@@ -149,11 +150,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--------- Start of current 10 second period ---------\n",
+      "2021-02-09 02:22:06.017594\n",
+      "TSLA moved -2.88% over the last 5 days\n",
+      "Order status for sell trade: filled\n",
+      "sell order price: 864.69\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for *: 'NoneType' and 'float'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-3-9e3ffad024af>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     61\u001b[0m         \u001b[1;32melif\u001b[0m \u001b[0mpercent_change\u001b[0m \u001b[1;33m<\u001b[0m \u001b[1;36m5\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     62\u001b[0m             \u001b[1;31m# Short trade signal - Open trade\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 63\u001b[1;33m             \u001b[0morder_status\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfilled_price\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtake_profit_level\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstop_loss_level\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfire_entry_trade\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'sell'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtake_profit_percent\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstop_loss_percent\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     64\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0morder_status\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m'filled'\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     65\u001b[0m                 \u001b[0min_short_position\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mTrue\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-2-e160bab191a9>\u001b[0m in \u001b[0;36mfire_entry_trade\u001b[1;34m(direction, tp_percent, sl_percent)\u001b[0m\n\u001b[0;32m     51\u001b[0m         \u001b[1;31m# Set take-profit and stop-loss\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     52\u001b[0m         \u001b[1;32melif\u001b[0m \u001b[0mdirection\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m'sell'\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 53\u001b[1;33m             take_profit_level = round((filled_price * (\n\u001b[0m\u001b[0;32m     54\u001b[0m                 1 - tp_percent / 100)), 2 # Round to 2 decimal places\n\u001b[0;32m     55\u001b[0m             )  # Calculate take profit level\n",
+      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for *: 'NoneType' and 'float'"
+     ]
+    }
+   ],
    "source": [
     "############### Strategy Section ###############\n",
     "    \n",
