Fixed TP and SL position

--- a/Alpaca-AlgoTrading101-Chapter-6/Fire a bracket order.ipynb
+++ b/Alpaca-AlgoTrading101-Chapter-6/Fire a bracket order.ipynb
@@ -24,6 +24,7 @@
     "\n",
     "today_close = barset['close'][-1]\n",
     "\n",
+    "# These are for long trades. Flip the numbers around for short trades.\n",
     "TP = today_close*1.2 # 20% TP\n",
     "SL = today_close*0.8 # 20% SL"
    ]
@@ -48,8 +49,8 @@
     "    time_in_force='day',\n",
     "    extended_hours=False, # Has to be False\n",
     "    order_class='bracket',\n",
-    "    stop_loss=dict(stop_price=TP), \n",
-    "    take_profit=dict(limit_price=SL)\n",
+    "    stop_loss=dict(stop_price=SL), \n",
+    "    take_profit=dict(limit_price=TP)\n",
     "    )\n",
     "        \n",
     "print(order_info)"
